--- a/index.html
+++ b/index.html
@@ -429,73 +429,12 @@
         </section> 
         <!-- contacr end -->
     </main>
-     <footer class="mt-5 p-lg-5">
-        <div class="container text-start">
-            <div class="row">
-                <div class="col-12 col-lg-8 text-white">
-                    <div class="row mt-5">
-                        <div class="col-6 col-lg-3">
-                            <span class="p-2">Downlode Now</span>
-                        </div>
-                        <div class="col-6 -lg-3">
-                            <span class="p-2">License</span>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-4 col-lg-2">
-                            <span class="p-2">About</span>
-                        </div>
-                        <div class="col-4 col-lg-2">
-                            <span class="p-2">Features</span>
-                        </div>
-                        <div class="col-4 col-lg-1">
-                            <span class="p-2">Pricing</span>
-                        </div>
-                        <div class="col-3 col-lg-1">
-                            <span class="p-2">Help</span>
-                        </div>
-                        <div class="col-4 col-lg-2">
-                            <span class="p-2">Careers</span>
-                        </div>
-                        <div class="col-5 col-lg-3">
-                            <span class="p-2">Privacy Policy</span>
-                        </div>
-                    </div>            
-                </div> 
-                <div class="col-12 col-lg-3 ">
-                    <p class="text-white mt-3 store-text"> Get the App</p>
-                    <div class="d-flex store text-white ">
-                        <i class="fab fa-apple icon-size"></i>
-                        <div class="mt-2">
-                            <p class="text-hight">Download on the</p>
-                            <p class="text-hight store-text">App Store</p>
-                        </div>
-                    </div>
-                    <div class="d-flex store text-white mt-3 ">
-                        <i class="fab fa-google-play  icon-size"></i>
-                        <div class="mt-2">
-                            <p class="text-hight">Got it on</p>
-                            <p class="text-hight store-text">Google Play</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-white mt-3 mt-lg-0 text-size">
-                <p> &copy;2020 bike. All rights reserved </p>
-            </div>
+     <footer class="mt-5 p-5">
+        <div class="text-white text-center  text-size">
+            <p class="footer-bottom"> &copy;2020 bike. All rights reserved </p>
         </div>
     </footer>
     
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- boostrap js -->
